# notion-automation-suite

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
config/defaults/: env.example
docs/: ARCHITECTURE_CURRENT.md  ARCHITECTURE_TARGET.md  EXAMPLES.md  GITHUB_RENAME_PLAN.md  MIGRATION_GUIDE.md  README.md  ROADMAP.md
docs/agents/: AGENTS_SPEC.md  NOTION_CARD_TRACKING.md  PLANO_EXECUCAO_AMANHA.md  PROJECT_PLAN.md  REGRAS_AGENTES.md
docs/legacy/: README_scripts.md
docs/mcp/: API.md  ARCHITECTURE.md  EXAMPLES.md  PROJECT_OVERVIEW.md  README.md  ROADMAP.md  SETUP_CURSOR.md
src/: notion_mcp.py  server.py
src/custom/: __init__.py  base.py  personal_notion.py  study_notion.py  work_notion.py  youtuber_notion.py
src/exceptions/: __init__.py  notion_service.py
src/notion_automation_suite/: __init__.py  cli.py
src/notion_automation_suite/agent_core/: notion_client.py
src/notion_automation_suite/agents/: agent_1_weekly_cards.py  agent_2_study_coach.py  agent_3_weekly_finalizer.py  agent_4_youtube_organizer.py  agent_6_report_generator.py  agent_789_integrated_monitor.py
src/notion_automation_suite/legacy/: __init__.py
src/notion_automation_suite/legacy/scripts/core/: notion_manager.py  youtuber_cards.py
src/notion_automation_suite/legacy/scripts/playbooks/: add_icon_to_card.py  add_icons_bloodlines.py  add_icons_outer_worlds.py  check_badges.py  check_overdue_tasks.py  create_corrected_tests.py  delete_test_cards.py  exemplo_criacao_subitens.py  gaming_auto.py  main.py  recreate_work_personal_tests.py  test_criacao_cards.py  test_system.py  update_gaming_dashboard.py
src/notion_automation_suite/legacy/scripts/playbooks/core/: notion_engine.py  personal_cards.py  studies_cards.py  work_cards.py
src/notion_automation_suite/legacy/scripts/playbooks/examples/: use_personal_templates.py
src/notion_automation_suite/legacy/scripts/playbooks/models/: personal_templates.py
src/notion_automation_suite/legacy/scripts/playbooks/scripts/Personal/: add_correct_icons.py  add_icons_personal_week.py  add_week_icons.py  calculate_daily_xp.py  check_personal_cards.py  check_personal_properties.py  create_agentes_automation.py  create_correct_personal_cards.py  create_from_templates.py  create_monthly_events.py  create_mylocalplace_phases.py  create_personal_cards.py  create_personal_week_cards.py  create_real_week_cards.py  create_retroactive_cards.py  criar_todos_subitens_personal.py  delete_recent_cards.py  delete_wrong_cards.py  fix_nota_fiscal.py  list_personal_templates.py  mark_latest_medical_payment.py  simple_add_icons.py  test_consulta_medica.py  update_medical_payment.py
src/notion_automation_suite/legacy/scripts/playbooks/scripts/Studies/: atualizar_card_aula1_completo.py  atualizar_icones_cursos.py  atualizar_icones_ia_master_v2.py  atualizar_periodo_secoes.py  atualizar_projetos_estudos.py  buscar_fase4_id.py  corrigir_algoritmos_geneticos.py  create_fiap_phase4_cards.py  create_pokemon_agent_chatbot.py  create_rocketseat_cards.py  create_studies_cards.py  criar_aulas_formacao_udemy_completo.py  criar_aulas_ia_master.py  criar_ia_knowledge_base_card.py  criar_integration_master.py  criar_novos_projetos_limbo.py  criar_subitens_ml_sales_forecasting.py  criar_subitens_ml_sales_forecasting_simples.py  cronograma_cursos_completo.py  cronograma_cursos_v2.py  cronograma_formacao_udemy.py  cronograma_master_completo.py  estruturar_roadmap_com_token.py  (+18 more)
src/notion_automation_suite/maestro/: README.md  __init__.py  orchestrator.py
src/notion_mcp/: __init__.py  server.py
src/notion_mcp/custom/: __init__.py  base.py  personal_notion.py  study_notion.py  work_notion.py  youtuber_notion.py
src/notion_mcp/services/: __init__.py  notion_service.py
src/notion_mcp/tools/: base_tools.py  personal_tools.py  study_tools.py  work_tools.py  youtuber_tools.py
src/notion_mcp/utils/: __init__.py  constants.py  formatters.py  validators.py
src/runtime/: __init__.py  app.py  config.py  notion_server.py  stdio_server.py
src/services/: __init__.py  notion_service.py
src/tools/: __init__.py  personal_tools.py  study_tools.py  work_tools.py  youtuber_tools.py
src/utils/: __init__.py  constants.py  formatters.py  validators.py
tests/: conftest.py  test_notion_service.py  test_work_notion.py
tests/custom/: test_personal_notion.py  test_work_notion.py
tests/mcp/: test_personal_notion.py  test_study_notion.py  test_youtuber_notion.py
tests/services/: test_integration_notion_service.py
tests/tools/: test_tools.py
(+20 files in other folders)
